--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stomp": "^5.1.0",
+    "sockjs-client": "^1.5.2",
+    "stompjs": "^2.3.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test_build": "dotenv -e .env.test react-scripts build",
     "test": "react-scripts test",
