--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.0.2",
     "@stomp/stompjs": "^6.1.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +16,7 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
+    "notistack": "^2.0.2",
     "perfect-scrollbar": "^1.5.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
