--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-stomp": "^5.1.0",
+    "redux": "^4.1.2",
+    "redux-actions": "^2.6.5",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
     "web-vitals": "^1.0.1"
@@ -56,6 +59,8 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "dotenv-cli": "^4.0.0"
+    "dotenv-cli": "^4.0.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6"
   }
 }
