--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "admin_front",
+  "contributors": [
+    "@jayi <jaehayi.id@gmail.com> (https://github.com/idjaeha)",
+    "@juhlee <leejuhae821@gmail.com> (https://github.com/LeeJuhae"
+  ],
   "version": "0.1.0",
   "private": true,
   "dependencies": {
