--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin_front",
   "contributors": [
     "@jayi <jaehayi.id@gmail.com> (https://github.com/idjaeha)",
-    "@juhlee <leejuhae821@gmail.com> (https://github.com/LeeJuhae"
+    "@juhlee <leejuhae821@gmail.com> (https://github.com/LeeJuhae)"
   ],
   "version": "0.1.0",
   "private": true,
@@ -37,7 +37,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test_build": "dotenv -e .env.test react-scripts build",
     "test": "react-scripts test",
