--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^17.0.37",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
@@ -33,6 +34,7 @@
     "redux-actions": "^2.6.5",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
+    "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
