--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.37",
+    "@types/redux": "^3.6.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
