--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "react-scripts start",
+    "start:local": "PORT=3001 dotenv -e .env.local react-scripts start",
     "build:prod": "react-scripts build",
     "build:test": "dotenv -e .env.test react-scripts build",
     "test": "react-scripts test",
