ADMN-69 Company 관련 API 추가

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.37",
     "@types/redux": "^3.6.0",
+    "@types/redux-actions": "^2.6.2",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
@@ -33,6 +36,7 @@
     "react-stomp": "^5.1.0",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.4.1",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
     "typescript": "^4.5.2",
