--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@jayi <jaehayi.id@gmail.com> (https://github.com/idjaeha)",
     "@juhlee <leejuhae821@gmail.com> (https://github.com/LeeJuhae)"
   ],
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.4.1",
@@ -18,6 +18,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.37",
+    "@types/react-router": "^5.1.17",
+    "@types/react-router-dom": "^5.3.2",
     "@types/redux": "^3.6.0",
     "@types/redux-actions": "^2.6.2",
     "@types/redux-logger": "^3.0.9",
