--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-actions": "^2.6.2",
     "@types/redux-logger": "^3.0.9",
+    "@types/redux-saga": "^0.10.5",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
@@ -39,6 +40,7 @@
     "react-stomp": "^5.1.0",
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
