ADMN-64 함수 분리, API 모듈화, 일부 파일 ts로 이전
- develop 환경 이름을 test -> develop으로 변경
- API 모듈화
- API 모듈화에 따른 import 경로명 수정
- 몇몇 파일 js -> ts로 전환

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,7 +18,7 @@ pipelines:
             - export REACT_APP_X_42CADET_CHECKIN_AUTH_KEY=$REACT_APP_X_42CADET_CHECKIN_AUTH_KEY
             - export REACT_APP_X_42CADET_VISITOR_AUTH_KEY=$REACT_APP_X_42CADET_VISITOR_AUTH_KEY
             - export REACT_APP_ENVIRONMENT=$REACT_APP_ENVIRONMENT
-            - npm run build:test
+            - npm run build:dev
           artifacts:
             - build/**
       - step:
