--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/redux-actions": "^2.6.2",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-saga": "^0.10.5",
-    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "moment": "^2.29.1",
@@ -41,9 +40,9 @@
     "redux": "^4.1.2",
     "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.4.1",
     "sockjs-client": "^1.5.2",
     "stompjs": "^2.3.3",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
@@ -51,7 +50,7 @@
     "start": "react-scripts start",
     "start:local": "PORT=3001 dotenv -e .env.local react-scripts start",
     "build:prod": "react-scripts build",
-    "build:test": "dotenv -e .env.test react-scripts build",
+    "build:dev": "dotenv -e .env.development react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
