--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/redux-saga": "^0.10.5",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
-    "moment": "^2.29.1",
+    "dayjs": "^1.10.7",
     "notistack": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
