--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "notistack": "^2.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.6",
