--- a/.github/workflows/aws_main.yml
+++ b/.github/workflows/aws_main.yml
@@ -1,8 +1,7 @@
-name: workflow for S3 Deploy
+name: workflow for S3 Deploy Main
 on:
   push:
     branches:
-      - develop
       - main
 jobs:
   run:
@@ -10,18 +9,21 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      REACT_APP_CHECKIN_API_URL: ${{secrets.REACT_APP_CHECKIN_API_URL}}
+      REACT_APP_VISITOR_API_URLL: ${{secrets.REACT_APP_VISITOR_API_URL}}
+      REACT_APP_X_42CADET_CHECKIN_AUTH_KEY: ${{secrets.REACT_APP_X_42CADET_CHECKIN_AUTH_KEY}}
+      REACT_APP_X_42CADET_VISITOR_AUTH_KEY: ${{secrets.REACT_APP_X_42CADET_VISITOR_AUTH_KEY}}
+      REACT_APP_VERSION: ${{secrets.REACT_APP_VERSION}}
+      REACT_APP_AUTH_KEY: ${{secrets.REACT_APP_AUTH_KEY}}
+      
     steps:
       - uses: actions/checkout@v2
 
       - name: Install dependencies
         run: yarn
 
-      - name: Build dev
-        run: yarn build:dev
-        if: contains(github.ref, 'develop')
-
       - name: Build prod
-        run: yarn build:prdo
+        run: yarn build:prod
         if: contains(github.ref, 'main')
 
       - name: Deploy
